# manim-phys

./: .gitignore  README.MD  custom_config.yml  pyproject.toml  requirements.txt
docs/: .gitkeep
manim_phys/: main.py  manim_types.py
manim_phys/tools/: wall.py  wall_kit.py
src/keep_project_name/: README.md
src/keep_project_name/interface/: .gitkeep
src/keep_project_name/model/: manim_types.py  phys_types.py
src/keep_project_name/model/state/: meta_state.py
src/keep_project_name/model/state/meta/: __init__.py  field.py  mass.py  shapes.py  space_time.py  velocity.py
src/keep_project_name/render/: .gitkeep  custom_config.yml
