[project]
name = "manim-phys"
version = "0.1.0"
description = "Visual Physical via Manim(GL)"
readme = "README.MD"
requires-python = ">=3.13"
dependencies = [
    "addict>=2.4.0",
    "appdirs>=1.4.4",
    "audioop-lts>=0.2.2 ; python_full_version >= '3.13'",
    "colour>=0.1.5",
    "diskcache>=5.6.3",
    "fonttools>=4.62.1",
    "ipython~=8.38.0",
    "isosurfaces>=0.1.2",
    "manimgl>=1.7.2",
    "manimpango>=0.6.0",
    "mapbox-earcut>=2.0.0",
    "matplotlib>=3.10.8",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "numpy>=2.4.3",
    "pillow>=12.2.0",
    "pydub>=0.25.1",
    "pygments>=2.19.2",
    "pyopengl>=3.1.10",
    "pyperclip>=1.11.0",
    "pywavefront>=1.3.3",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "screeninfo>=0.8.1",
    "setuptools==78.1.1",
    "skia-pathops>=0.9.2",
    "svgelements>=1.8.1",
    "sympy>=1.14.0",
    "tqdm>=4.67.3",
    "trimesh>=4.11.3",
    "typing-extensions>=4.15.0",
    "typing-extensions ; python_full_version < '3.11'",
    "validators>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.10",
]
